community repo conection